# Smart-Subtitle-and-Summarization-Video-Generator

./: .env.example  .gitignore  README.md  agent_controller.py  gemini_model.py  hybrid_subtitle_generator.py  main.py  pyproject.toml  requirements.txt  simplified_speaker_recognition.py  simplified_summarization.py  streamlit_app.py
pipeline/: video_processing_pipeline.py
tools/: audio_tool.py  file_tool.py  quality_verification_tool.py  speaker_tool.py  subtitle_tool.py  summarization_tool.py  transcription_tool.py  translation_tool.py  video_tool.py
utils/: error_handling.py  file_handling.py  file_path_utils.py  path_utils.py
